modal overlap issue fixed

--- a/src/admin/components/sidebar/css/drawer.module.css
+++ b/src/admin/components/sidebar/css/drawer.module.css
@@ -6,7 +6,7 @@
   height: 100vh;
   transition: all 0.5s cubic-bezier(0.86, 0, 0.07, 1);
   background: #fff;
-  z-index: 99996;
+  z-index: 2;
   overflow-y: scroll;
 }
 
@@ -18,7 +18,7 @@
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(3px);
-  z-index: 99995;
+  z-index: 1;
 }
 
 .overlay {
